--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="card">
  <div class="card-content">
-<h2>Fehler 404</h2>
+<h2>Failure: 404</h2>
   </div>
   <div class="card-action">
-<a class="btn" href="/index.html">STARTSEITE</a>
+<a class="btn" href="/index.html">Back to Main Site</a>
   </div></div>
