--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>Projekte</h2>
+<h2>Projects</h2>
 <div class="grid">
 {% assign c = 0 %}{% assign d = 1 %}{% for p in site.data.projects %}{% if d == 0 %}
 </div>
@@ -17,7 +17,7 @@ layout: default
         <a href="{{ p.link }}" class="btn"><i class="icon ion-earth"></i> LINK</a>
         {% endif %}
         {% if p.github %}
-        <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>        
+        <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>
         {% endif %}
     </div>
 </div>
@@ -33,7 +33,7 @@ layout: default
         <a href="{{ p.link }}" class="btn"><i class="icon ion-earth"></i> LINK</a>
         {% endif %}
         {% if p.github %}
-        <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>        
+        <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>
         {% endif %}
     </div>
 </div>
