add irc links to projects

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ layout: default
         {% if p.github %}
         <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>
         {% endif %}
+        {% if p.irc %}
+        <a href="{{ p.irc }}" class="btn"></i> IRC</a>
+        {% endif %}
     </div>
 </div>
 </div>
