wiki links and new projects

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ layout: default
             <a href="{{ p.link }}" class="btn" target="_blank"><i class="fas fa-link"></i> LINK</a>
         {% endif %}
         {% if p.github %}
-        <a href="{{ p.github }}" class="btn"><i class="icon ion-social-github"></i> REPO</a>
+            <a href="{{ p.github }}" class="btn" target="_blank"><i class="fab fa-github"></i> REPO</a>
+        {% endif %}
+        {% if p.wiki %}
+            <a href="{{ p.wiki }}" class="btn" target="_blank"><i class="fas fa-book"></i> WIKI</a>
         {% endif %}
     </div>
 </div>
@@ -35,8 +38,8 @@ layout: default
         {% if p.github %}
         <a href="{{ p.github }}" class="btn" target="_blank"><i class="fab fa-github"></i> REPO</a>
         {% endif %}
-        {% if p.irc %}
-        <a href="{{ p.irc }}" class="btn"></i> IRC</a>
+        {% if p.wiki %}
+        <a href="{{ p.wiki }}" class="btn" target="_blank"><i class="fas fa-book"></i> WIKI</a>
         {% endif %}
     </div>
 </div>
